// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Icon /> with additional className matches its snapshot 1`] = `
<svg
  aria-hidden="true"
  className="y-icon TEST_CLASSNAME"
  style={
    Object {
      "height": "16px",
      "width": "16px",
    }
  }
>
  <use
    xlinkHref="#attach"
  />
</svg>
`;

exports[`<Icon /> with block matches its snapshot 1`] = `
<svg
  aria-hidden="true"
  className="y-icon y-icon__isBlock"
  style={
    Object {
      "height": "16px",
      "width": "16px",
    }
  }
>
  <use
    xlinkHref="#attach"
  />
</svg>
`;

exports[`<Icon /> with color matches its snapshot 1`] = `
<svg
  aria-hidden="true"
  className="y-icon"
  style={
    Object {
      "color": "blue",
      "height": "16px",
      "width": "16px",
    }
  }
>
  <use
    xlinkHref="#attach"
  />
</svg>
`;

exports[`<Icon /> with minimal options matches its snapshot 1`] = `
<svg
  aria-hidden="true"
  className="y-icon"
  style={
    Object {
      "height": "16px",
      "width": "16px",
    }
  }
>
  <use
    xlinkHref="#attach"
  />
</svg>
`;

exports[`<Icon /> with passed size value matches its snapshot 1`] = `
<svg
  aria-hidden="true"
  className="y-icon"
  style={
    Object {
      "height": "32px",
      "width": "32px",
    }
  }
>
  <use
    xlinkHref="#attach"
  />
</svg>
`;
